Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/fields/fieldSelection.deca
// Description:
//    Selection d'une méthode en tant que champ
//
// Resultat: Ligne 17
//    ContextualError : Unsupported operand for this selection: Right operand must be a field
//
// Historique:
//    Créé le 24/01/2018

class A{
      void x(){
      }      
}

{
	A a = new A();
	a.x = 10;
}